* Escape external string (issue9394)

Version 5.2.17 - 2020-06-16
* Bug fixes (see mercurial logs for details)

Version 5.2.16 - 2020-06-03
* Bug fixes (see mercurial logs for details)

Version 5.2.15 - 2020-05-26
* Bug fixes (see mercurial logs for details)
* Escape external strings (issue9351)

Version 5.2.14 - 2020-05-01
* Bug fixes (see mercurial logs for details)

Version 5.2.13 - 2020-03-15
* Bug fixes (see mercurial logs for details)

Version 5.2.12 - 2020-03-09
* Bug fixes (see mercurial logs for details)
* Add noreferrer noopener to external URL (issue9089)

Version 5.2.11 - 2020-02-02
* Bug fixes (see mercurial logs for details)

Version 5.2.10 - 2019-12-16
* Bug fixes (see mercurial logs for details)

Version 5.2.9 - 2019-12-02
* Bug fixes (see mercurial logs for details)

Version 5.2.8 - 2019-11-08
* Bug fixes (see mercurial logs for details)

Version 5.2.7 - 2019-10-06
* Bug fixes (see mercurial logs for details)

Version 5.2.6 - 2019-09-15
* Bug fixes (see mercurial logs for details)

Version 5.2.5 - 2019-09-01
* Bug fixes (see mercurial logs for details)

Version 5.2.4 - 2019-08-17
* Bug fixes (see mercurial logs for details)

Version 5.2.3 - 2019-08-01
* Bug fixes (see mercurial logs for details)

Version 5.2.2 - 2019-07-01
* Bug fixes (see mercurial logs for details)

Version 5.2.1 - 2019-06-10
* Bug fixes (see mercurial logs for details)

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add domain inversion for reference fields
* Add list-form view
* Support HTML widget
* Use locale format for data export
* Add day view on calendar
* Add CSV exports into print toolbar
* Display unread and total of notes
* Use resources method
* Rename roundup.url configuration to bug.url
* Use separate XML parser in Views
* Add range selection with Shift-click
* Use between numbers in filter box
* Fill 'to' with 'from' value on filter box
* Add tab domain in URL
* Use properties
* Allow sao classes to use javascript properties