@@ -1,3 +1,4 @@
+* Sanitize RichtText fields content (issue9405)
 * Escape external string (issue9394)
 
 Version 5.2.17 - 2020-06-16
